[gd_scene load_steps=2 format=3 uid="uid://b26swabvbgr4o"]

[ext_resource type="Script" uid="uid://p2hns3s62b64" path="res://scripts/NewRun.gd" id="1_faoww"]

[node name="NewRun" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_faoww")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 470.0
offset_top = 32.0
offset_right = 678.0
offset_bottom = 80.0
color = Color(0, 0, 0, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 45.0
offset_right = 811.0
offset_bottom = 76.0
bbcode_enabled = true
text = "New Run"
fit_content = true
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 29.0
offset_right = 138.0
offset_bottom = 95.0
text = "Back"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 471.0
offset_top = 87.0
offset_right = 682.0
offset_bottom = 134.0
bbcode_enabled = true
text = "Choose Your Deity"
fit_content = true
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 125.0
offset_right = 1144.0
offset_bottom = 445.0
follow_focus = true
draw_focus_border = true

[node name="DeityContainer" type="HBoxContainer" parent="ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SelectButton" type="Button" parent="."]
layout_mode = 0
offset_left = 494.0
offset_top = 529.0
offset_right = 634.0
offset_bottom = 636.0
text = "Select"

[node name="TooltipPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TooltipText" type="RichTextLabel" parent="TooltipPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
bbcode_enabled = true
fit_content = true

[node name="NavButtons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 398.0
offset_top = 469.0
offset_right = 728.0
offset_bottom = 522.0
alignment = 1

[node name="LeftButton" type="Button" parent="NavButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "<"

[node name="RightButton" type="Button" parent="NavButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = ">"
